# agent-guard

./: .gitignore  LICENSE  README.md  agent-guard.example.yaml  pyproject.toml
.claude/: settings.local.json
agent_guard/: audit.py  cli.py  config.py  pipeline.py  proxy.py
agent_guard/detectors/: dangerous.py  injection.py  secrets.py  taint.py
docs/superpowers/plans/: 2026-06-10-agent-guard-mcp-interceptor.md
docs/superpowers/specs/: 2026-06-10-agent-guard-mcp-interceptor-design.md
examples/: verdict_demos.py
tests/: test_audit.py  test_cli.py  test_config.py  test_dangerous.py  test_injection.py  test_pipeline.py  test_proxy_integration.py  test_secrets.py  test_taint.py
tests/fixtures/: mock_server.py
