[project]
name = "agent-guard"
version = "0.1.0"
description = "Runtime security proxy for MCP agent tool calls"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
agent-guard = "agent_guard.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_guard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
